gcc/testsuite/rust/rustc/ui/parser/issue-41155.rs
struct S;

impl S {
    pub // { dg-error "" "" { target *-*-* } }
} // { dg-error "" "" { target *-*-* } }

fn main() {}

